--- a/index.html
+++ b/index.html
@@ -4,282 +4,182 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Lélekmorzsák - Novellák és elbeszélések a vidéki életről és gyermekkor élményeiről.">
     <title>Lélekmorzsák</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+        integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,400&family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Roboto:wght@400;700&display=swap');
+
         body {
-            font-family: 'Georgia', serif;
-            background-color: #f4f1e1;
-            color: #3e2c1c;
+            font-family: 'Lora', serif;
+            background-color: #E7D7C1;
+            color: #583101;
             margin: 0;
             padding: 0;
-            line-height: 1.5;
+            line-height: 1.6;
+            font-size: 0.9em;
+            text-align: center;
         }
 
         header {
-            background-color: #7e5a3c;
-            color: #fff;
+            width: 100%;
+            background-color: #735751;
+            color: #FFEDD8;
             text-align: center;
-            padding: 15px 10px;
-            border-bottom: 4px solid #4e3629;
+            padding: 5px;
+            height: 75px;
+            border-bottom: 1px solid #8B5E34;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            position: relative;
         }
 
         header h1 {
-            font-size: 2em;
-            font-family: 'Times New Roman', serif;
-            margin: 0;
+            font-family: 'Playfair Display', serif;
+            font-size: 1.8em;
+            margin-bottom: 0;
+            color: #FFEDD8;
         }
 
         header p {
-            font-size: 1em;
+            font-family: 'Lora', serif;
+            font-size: 0.9em;
+            opacity: 0.8;
             font-style: italic;
+            margin-top: 0;
+            color: #FFEDD8;
+        }
+
+        .header-icons {
+            position: absolute;
+            top: 50%;
+            right: 30px;
+            transform: translateY(-50%);
+        }
+
+        .header-icons a {
+            color: #FFEDD8;
+            margin-left: 10px;
+            font-size: 1.2em;
+        }
+
+        .header-icons a:hover {
+            color: #E7D7C1;
         }
 
         .container {
-            width: 80%;
-            margin: 30px auto;
-            background-color: #fff;
-            padding: 15px;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            max-width: 700px;
+            margin: 25px auto;
+            padding: 30px;
+            background-color: #FFFFFF;
+            border-radius: 8px;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+            text-align: left;
         }
 
         .story {
-            margin-bottom: 20px;
-            padding: 12px;
-            border-bottom: 2px solid #7e5a3c;
+            margin-bottom: 30px;
+            padding: 20px;
+            border-bottom: 1px solid #BC8A5F;
+            border-radius: 8px;
+            transition: transform 0.3s ease;
+            text-align: left;
+        }
+
+        .story:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 8px 18px rgba(0, 0, 0, 0.2);
         }
 
         .story h2 {
-            font-size: 1.5em;
-            font-family: 'Times New Roman', serif;
-            color: #7e5a3c;
-            margin-bottom: 10px;
-        }
-
-        .story h2 .number {
-            color: #5a4a3c;
-            /* Sötétebb árnyalat a sorszámhoz */
+            font-family: 'Lora', serif;
+            font-size: 1.3em;
+            color: #583101;
+            margin-bottom: 15px;
+            font-weight: bold;
         }
 
         .story p {
-            font-size: 0.95em;
-            margin-bottom: 6px;
-        }
-
-        .story .short-text {
-            display: block;
-        }
-
-        .story .full-text {
-            display: none;
-            font-size: 0.95em;
-            margin-top: 10px;
+            font-size: 0.9em;
+            margin-bottom: 10px;
         }
 
         .story a {
-            color: #7e5a3c;
+            font-family: 'Lora', serif;
+            color: #8C1C13;
             font-weight: bold;
             text-decoration: none;
+            font-size: 0.8em;
+            display: inline-block;
+            margin-top: 10px;
+            padding: 8px 15px;
+            border: 1px solid #8C1C13;
+            border-radius: 8px;
+            transition: background-color 0.3s ease, color 0.3s ease;
         }
 
         .story a:hover {
-            text-decoration: underline;
+            background-color: #8C1C13;
+            color: #fff;
+            text-decoration: none;
+        }
+
+        .full-text {
+            display: none;
+            /* Alapból elrejtjük a teljes szöveget */
         }
 
         footer {
             text-align: center;
-            background-color: #7e5a3c;
-            color: white;
-            padding: 10px 10px;
+            background-color: #735751;
+            color: #FFEDD8;
+            padding: 10px;
             position: fixed;
             width: 100%;
             bottom: 0;
-        }
-
-        footer p {
-            font-size: 0.95em;
-            margin: 0;
+            box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
+            border-radius: 8px 8px 0 0;
+            font-size: 0.7em;
         }
 
         /* Reszponzív módosítások */
         @media screen and (max-width: 768px) {
             body {
-                font-size: 0.9em;
+                font-size: 0.7em;
             }
 
-            header h1 {
-                font-size: 1.6em;
-            }
-
-            header p {
-                font-size: 0.9em;
-            }
-
-            .container {
-                width: 95%;
-                padding: 10px;
-            }
-
-            .story h2 {
-                font-size: 1.3em;
-            }
-
-            .story p {
-                font-size: 0.9em;
-            }
-        }
-
-        /* Kisebb mobil eszközökhöz */
-        @media screen and (max-width: 480px) {
             header h1 {
                 font-size: 1.4em;
             }
 
-            footer p {
-                font-size: 0.85em;
+            .container {
+                width: 95%;
+                padding: 15px;
             }
-        }
-    </style>
-    <script>
-        function toggleText(link) {
-            var storySection = link.closest('.story');
-            var shortText = storySection.querySelector('.short-text');
-            var fullText = storySection.querySelector('.full-text');
 
-            if (fullText.style.display === "none" || fullText.style.display === "") {
-                shortText.style.display = "none";
-                fullText.style.display = "block";
-                link.textContent = "Kevesebb olvasása...";
-            } else {
-                shortText.style.display = "block";
-                fullText.style.display = "none";
-                link.textContent = "Tovább olvasom...";
+            .story h2 {
+                font-size: 1.1em;
             }
-        }
-    </script>
-</head>
 
-<!DOCTYPE html>
-<html lang="hu">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Lélekmorzsák - Elbeszélések, novellák Vargáné Balogh Irén tollából">
-    <title>Lélekmorzsák</title>
-    <style>
-        /* Alapstílusok */
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f5f5f5;
-            color: #333;
-            margin: 0;
-            padding: 0;
-            line-height: 1.6;
-        }
-
-        header {
-            background-color: #7b5e3a;
-            color: #fff;
-            text-align: center;
-            padding: 15px;
-            border-bottom: 3px solid #5a4428;
-        }
-
-        header h1 {
-            font-size: 2em;
-            margin: 0;
-        }
-
-        header p {
-            font-size: 1em;
-            opacity: 0.8;
-        }
-
-        .container {
-            width: 95%;
-            max-width: 700px;
-            margin: 30px auto;
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-        }
-
-        .story {
-            background: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.08);
-            transition: transform 0.3s ease;
-        }
-
-        .story:hover {
-            transform: translateY(-3px);
-        }
-
-        .story h2 {
-            font-size: 1.5em;
-            color: #5a4428;
-            margin-bottom: 10px;
-        }
-
-        .story .short-text {
-            font-size: 0.9em;
-        }
-
-        .story .full-text {
-            display: none;
-            font-size: 0.9em;
-            margin-top: 10px;
-        }
-
-        .story a {
-            color: #7b5e3a;
-            font-weight: bold;
-            text-decoration: none;
-            font-size: 0.9em;
-            display: inline-block;
-            margin-top: 8px;
-        }
-
-        .story a:hover {
-            text-decoration: underline;
-        }
-
-        footer {
-            text-align: center;
-            background-color: #7b5e3a;
-            color: white;
-            padding: 10px;
-            font-size: 0.9em;
-            margin-top: 30px;
+            .story p {
+                font-size: 0.8em;
+            }
         }
 
         @media screen and (max-width: 480px) {
             header h1 {
-                font-size: 1.8em;
+                font-size: 1.2em;
+            }
+
+            footer p {
+                font-size: 0.6em;
             }
         }
     </style>
-    <script>
-        function toggleText(link) {
-            var storySection = link.closest('.story');
-            var shortText = storySection.querySelector('.short-text');
-            var fullText = storySection.querySelector('.full-text');
-
-            if (fullText.style.display === "none" || fullText.style.display === "") {
-                shortText.style.display = "none";
-                fullText.style.display = "block";
-                link.textContent = "Kevesebb olvasása...";
-            } else {
-                shortText.style.display = "block";
-                fullText.style.display = "none";
-                link.textContent = "Tovább olvasom...";
-            }
-        }
-    </script>
 </head>
 
 <body>
@@ -920,6 +820,23 @@
         <p>&copy; 2025 Lélekmorzsák - Minden jog fenntartva</p>
     </footer>
 
+    <script>
+        function toggleText(link) {
+            var storySection = link.closest('.story');
+            var shortText = storySection.querySelector('.short-text');
+            var fullText = storySection.querySelector('.full-text');
+
+            if (fullText.style.display === "none" || fullText.style.display === "") {
+                shortText.style.display = "none";
+                fullText.style.display = "block";
+                link.textContent = "Kevesebb olvasása...";
+            } else {
+                shortText.style.display = "block";
+                fullText.style.display = "none";
+                link.textContent = "Tovább olvasom...";
+            }
+        }
+    </script>
 </body>
 
 </html>
